# arbiter

./: .env.example  .gitignore  Cargo.toml  Makefile.toml  Procfile  README.md  epoch.yaml  rust-toolchain.toml  rustfmt.toml  zzz.md
arbiter/: Cargo.toml  README.md  top_traders.json  tx.json
arbiter/src/: cache.rs  client.rs  main.rs  trader.rs  types.rs
arbiter_client/: Cargo.toml  README.md  pnl_history.json
arbiter_client/src/: client.rs  lib.rs  time.rs
baker/: Cargo.toml  config.yaml
baker/src/: baker.rs  config.rs  main.rs
bracketeer/: Cargo.toml  config.yaml
bracketeer/src/: bracketeer.rs  config.rs  main.rs
common/: Cargo.toml
common/src/: hash.rs  lib.rs  macros.rs  plot.rs  ring_buffer.rs  traits.rs
common/src/bytes/: any_bit_pattern_array.rs  checked_array.rs  mod.rs
common/src/types/: archive_account.rs  channel.rs  epoch_account.rs  keyed_account.rs  mod.rs  query.rs  redis.rs  transaction.rs
common/src/utils/: mod.rs  serde.rs  strings.rs
decoder/: Cargo.toml
decoder/src/: decoded_account.rs  decoder.rs  drift.rs  lib.rs  program_decoder.rs
decoder/src/drift/: client.rs  drift.rs  historical.rs  mod.rs
decoder/src/drift/types/: math.rs  mod.rs  oracle.rs  order.rs  perp.rs  spot.rs  user.rs
decoder/src/program_helpers/: drift.rs  mod.rs
demon/: Cargo.toml
demon/src/: config.rs  main.rs
idls/drift/: Cargo.toml
idls/drift/src/: casting.rs  floor_div.rs  lib.rs  math.rs  oracle.rs  safe_math.rs  safe_unwrap.rs
idls/switchboard/: Cargo.toml
idls/switchboard/src/: lib.rs
imitator/: Cargo.toml  README.md  config.yaml  top_traders.json
imitator/src/: client.rs  imitator.rs  main.rs
nexus/: Cargo.toml
nexus/src/: backtest.rs  bad_backtest.rs  bar.rs  cache.rs  constants.rs  data.rs  grpc.rs  lib.rs  logger.rs  nexus.rs  nexus_client.rs  plot.rs  trx_builder.rs  types.rs  utils.rs  websocket.rs
nexus/src/drift_client/: amm.rs  cache.rs  client.rs  historical.rs  mod.rs  orderbook.rs  program_data.rs  trader.rs  types.rs  utils.rs
nexus/src/graphql/: client.rs  drift_user.rs  mod.rs  request.rs  response.rs
nexus/src/math/: calculus.rs  entropy.rs  fft.rs  hurst.rs  mod.rs  regression.rs  statistics.rs  zscore.rs
nexus/src/types/: fft.rs  geyser.rs  geyser_websocket.rs  keyed_account.rs  misc.rs  mod.rs  trade.rs  transaction.rs
nexus/src/utils/: account.rs  decode.rs  env.rs  kagi.rs  keypair.rs  logger.rs  macros.rs  math.rs  mod.rs  plot.rs  ring_buffer.rs  ring_map.rs  serde.rs  strings.rs  time.rs  timer.rs
nexus/tests/: backtest.rs
playbook/baker/: Cargo.toml
playbook/baker/src/: baker.rs  main.rs
playbook/bracketeer/: Cargo.toml
playbook/bracketeer/src/: client.rs  config.rs  main.rs
playbook/delta_neutral/: Cargo.toml
playbook/delta_neutral/src/: engine.rs
playbook/demon/: Cargo.toml
playbook/demon/src/: demon.rs
playbook/entropy/: Cargo.toml  results.md
playbook/entropy/src/: backtest.rs  client.rs  config.rs  engine.rs  main.rs
playbook/fourier/: Cargo.toml
playbook/fourier/src/: backtest.rs  client.rs  config.rs  engine.rs  main.rs
playbook/fr_arb/: Cargo.toml
playbook/fr_arb/src/: config.rs  engine.rs  main.rs
playbook/half_life/: Cargo.toml
playbook/half_life/src/: backtest.rs  client.rs  config.rs  engine.rs  main.rs
playbook/imitator/: Cargo.toml  top_traders.json
playbook/imitator/src/: config.rs  engine.rs  imitator.rs  main.rs
playbook/shannons_demon/: Cargo.toml
playbook/shannons_demon/src/: backtest.rs  main.rs
playbook/stat_arb/: Cargo.toml
playbook/stat_arb/src/: backtest.rs  client.rs  config.rs  engine.rs  main.rs  stat_arb.rs
playbook/uncross/: Cargo.toml  config.yaml
playbook/uncross/src/: uncross.rs
programs/drift/: Cargo.toml  idl_2.71.0.json
programs/drift/src/: lib.rs
programs/drift/src/utils/: casting.rs  ceil_div.rs  constants.rs  lookup_table.rs  math.rs  mod.rs  oracle.rs
programs/drift_vaults/: Cargo.toml
programs/drift_vaults/src/: lib.rs
programs/jit_proxy/: Cargo.toml  idl.json
programs/jit_proxy/src/: lib.rs
programs/switchboard/: Cargo.toml
programs/switchboard/src/: lib.rs
stat_arb/: Cargo.toml
stat_arb/src/: backtest.rs
switzerland/: Cargo.toml  config.yaml
switzerland/src/: config.rs  data.rs  main.rs  switzerland.rs
uncross/: Cargo.toml  config.yaml
uncross/src/: config.rs  main.rs  uncross.rs
