[workspace]
resolver = "2"
members = [
    "common",
    "decoder",
    "arbiter_client",
]

[workspace.package]
version = "0.1.0"
authors = ["Cosmic Lab <epochsolana@gmail.com>"]
repository = "https://github.com/cosmic-lab-inc"
license = "Apache-2.0"
edition = "2021"
description = "Solana archival account state, easily accessible by anyone."
categories = ["cryptography::cryptocurrencies", "database"]
keywords = ["solana"]

[workspace.dependencies]
anchor-lang = "0.27.0"
anyhow = "1.0.75"
base64 = "0.22.0"
bincode = "1.3.3"
borsh = { version = "0.10.3", features = ["std", "bytes"] }
bytemuck = { version = "1.14.3", features = ["derive", "extern_crate_std"] }
bytes = "1.2"
chrono = { version = "0.4.35", features = ["serde"] }
crossbeam = { version = "0.8.1" }
crossbeam-channel = "0.5.8"
csv = { version = "1.1.6" }
dotenv = "0.15.0"
futures = "0.3.30"
lazy_static = "1.4.0"
log = "0.4"
rayon = "1.9.0"
reqwest = { version = "0.12.4", features = ["blocking", "stream"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_bytes = "0.11.14"
serde_derive = "1.0.171"
serde_json = "1.0.114"
serde_yaml = "0.9.25"
simplelog = "0.12.0"
solana-sdk = "1.14.16"
solana-client = "1.14.16"
time = "0.3.14"
thiserror = "1.0.44"
tokio = { version = "1.34.0", features = ["full"] }
rand = "0.8.5"