[package]
name = "arbiter"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anchor-lang = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
borsh = { workspace = true }
bytemuck = { workspace = true }
csv = { workspace = true }
chrono = { workspace = true }
common = { path = "../common" }
nexus = { path = "../nexus" }
derive_more = "0.99.17"
dotenv = { workspace = true }
futures = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
plotters = "0.3.5"
rayon = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-transaction-status = { workspace = true }
serde_yaml = { workspace = true }
simplelog = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
spl-associated-token-account = { version = "3.0.2", features = ["no-entrypoint"] }
spl-token = { version = "4", features = ["no-entrypoint"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tungstenite = { version = "0.21.0", features = ["native-tls"] }
uuid = { version = "1.3.0", features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
flate2 = "1.0"
solana-account-decoder = { workspace = true }
heck = { workspace = true }
