[package]
name = "arbiter_client"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
spl-associated-token-account = { version = "1.1.1", features = ["no-entrypoint"] }
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
anyhow = { workspace = true }
borsh = { workspace = true }
chrono = { workspace = true }
common = { path = "../common" }
decoder = { path = "../decoder" }
derive_more = "0.99.17"
dotenv = { workspace = true }
futures = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
plotters = "0.3.5"
rayon = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
simplelog = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tungstenite = { version = "0.21.0", features = ["native-tls"] }
uuid = { version = "1.3.0", features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
anchor-lang = { workspace = true }
bytemuck = { workspace = true }
base64 = { workspace = true }
drift = { git = "https://github.com/drift-labs/protocol-v2.git", rev = "2bbe28c", features = [
    "mainnet-beta", "drift-rs"
] }
