[package]
name = "common"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anchor-lang = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
borsh = { workspace = true }
chrono = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
simplelog = { workspace = true }
sol-chainsaw = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
plotters = { version = "0.3.5", features = ["default"] }
rand = { workspace = true }
