[package]
name = "nexus"
version = { workspace = true }
edition = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
borsh = { workspace = true }
bytemuck = { workspace = true }
chrono = { workspace = true }
drift-cpi = { path = "../programs/drift" }
futures = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
simplelog = { workspace = true }
solana-account-decoder = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
switchboard-cpi = { path = "../programs/switchboard" }
tokio = { workspace = true }
heck = { workspace = true }
reqwest = { workspace = true }
flate2 = "1.0"
csv = { workspace = true }
semver = "1.0.23"
solana-rpc-client-api = { workspace = true }
url = "2.2.2"
futures-util = "0.3.30"
solana-transaction-status = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-token = { workspace = true }
thiserror = { workspace = true }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls", "handshake"] }
tokio-stream = "0.1.15"
crossbeam = { workspace = true }
plotters = { version = "0.3.5" }
rand = { workspace = true }
indexmap = "2.2.6"
yellowstone-grpc-client = { workspace = true }
yellowstone-grpc-proto = { workspace = true }
maplit = { workspace = true }
async-stream = "0.3.5"
num-bigint = "0.4"
num-traits = "0.2"
time = { workspace = true }
jit-proxy-cpi = { path = "../programs/jit_proxy" }
#drift-vaults-cpi = { path = "../programs/drift_vaults" }