[package]
name = "stat_arb"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anchor-lang = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
borsh = { workspace = true }
bytemuck = { workspace = true }
csv = { workspace = true }
chrono = { workspace = true }
bincode = { workspace = true }
nexus = { path = "../../nexus" }
derive_more = { workspace = true }
dotenv = { workspace = true }
futures = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-transaction-status = { workspace = true }
serde_yaml = { workspace = true }
simplelog = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-token = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
solana-account-decoder = { workspace = true }
heck = { workspace = true }
crossbeam = { workspace = true }
yellowstone-grpc-client = { workspace = true }
yellowstone-grpc-proto = { workspace = true }
statrs = { workspace = true }
tradestats = { workspace = true }