[package]
name = "drift-cpi"
version = { workspace = true }
edition = { workspace = true }

[features]
default = ["cpi"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-gen = { workspace = true }
anchor-lang = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
borsh = { workspace = true }
log = { workspace = true }
num-traits = "0.2"
pyth-client = "0.2.2"
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
solana-sdk = { workspace = true }
switchboard-cpi = { path = "../switchboard" }
uint = { version = "0.9.1", default-features = false }
